# scenenet_to_rosbag

./: .gitignore  CMakeLists.txt  README.md  package.xml  pointcloud_publisher.py  scenenet_to_rosbag.py
nodes/: scenenet_to_rosbag.py
