<?xml version="1.0"?>
<package format="2">
  <name>scenenet_ros_tools</name>
  <version>1.0.0</version>
  <description>Publish SceneNet data via ROS</description>

  <author email="grinvalm@student.ethz.ch">Margarita Grinvald</author>

  <maintainer email="grinvalm@student.ethz.ch">Margarita Grinvald</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>image_geometry</depend>
  <depend>rospy</depend>

</package>
